<resources>
    <string name="app_name">FinalProjectCalorieTracker</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Full name</string>
    <string name="nav_header_subtitle">email@address.com</string>
    <string name="nav_header_desc">Navigation header</string>

    <string name="action_settings">Settings</string>
    <string name="action_logout">Log out</string>

    <string name="menu_home">Home</string>
    <string name="menu_add_food">Add</string>
    <string name="menu_diets">Diets</string>
    <string name="menu_reminders">Reminders</string>
    <string name="menu_about_us">About Us</string>
    <string name="menu_notifications">Notifications</string>
    <string name="menu_history">History</string>
    <string name="menu_goals">Goals</string>
    <string name="menu_profile">Profile</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_login">Log in</string>
    <string name="menu_logout">Log out</string>
    <string name="menu_help">Help</string>

    <string name="login_button_text">Login</string>
    <string name="logout_button_text">Logout</string>
    <string name="login_unsuccessful_msg">Login unsuccessful</string>
    <string name="welcome_message">Welcome to \n%1$s</string>
    <string name="welcome_message_authed">Welcome %1$s!</string>
    <string name="login_prompt">Login to start tracking your calories!</string>
    <string name="login_btn">Login</string>
    <string name="settings_btn">Settings</string>
    <string name="open">open</string>
    <string name="close">close</string>
</resources>