<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_nav_home_foreground"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_history"
            android:icon="@drawable/ic_nav_history_foreground"
            android:title="@string/menu_history" />
        <item
            android:id="@+id/nav_reminders"
            android:icon="@drawable/ic_nav_reminders_foreground"
            android:title="@string/menu_reminders" />
        <item
            android:id="@+id/nav_notifications"
            android:icon="@drawable/ic_nav_notifications_foreground"
            android:title="@string/menu_notifications" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_nav_settings_foreground"
            android:title="@string/menu_settings" />
        <item
            android:id="@+id/nav_goals"
            android:icon="@drawable/ic_launcher_foreground"
            android:title="@string/menu_goals"/>
<!--        <item-->
<!--            android:id="@+id/nav_logout"-->
<!--            android:icon="@drawable/ic_nav_logout_foreground"-->
<!--            android:title="@string/menu_logout" />-->
    </group>
</menu>