<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="project.st991377867.marcin.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_nav_home_to_itemFragment"
            app:destination="@id/itemFragment" />
        <action
            android:id="@+id/action_nav_home_to_itemDetailFragment"
            app:destination="@id/itemDetailFragment" />
    </fragment>

    <fragment
        android:id="@+id/nav_login"
        android:name="project.st991377867.marcin.ui.login.LoginFragment"
        android:label="@string/menu_login"
        tools:layout="@layout/fragment_login" />

    <fragment
        android:id="@+id/nav_notifications"
        android:name="project.st991377867.marcin.ui.notifications.NotificationsFragment"
        android:label="@string/menu_notifications"
        tools:layout="@layout/fragment_notifications" />

    <fragment
        android:id="@+id/nav_reminders"
        android:name="project.st991377867.marcin.ui.reminders.RemindersFragment"
        android:label="@string/menu_reminders"
        tools:layout="@layout/fragment_reminders" />
    <fragment
        android:id="@+id/nav_diets"
        android:name="project.st991377867.marcin.ui.diets.DietsFragment"
        android:label="@string/menu_diets"
        tools:layout="@layout/fragment_diets" />
    <fragment
        android:id="@+id/nav_goals"
        android:name="project.st991377867.marcin.ui.goals.GoalsFragment"
        android:label="@string/menu_goals"
        tools:layout="@layout/fragment_goals" />
    <fragment
        android:id="@+id/nav_profile"
        android:name="project.st991377867.marcin.ui.goals.GoalsFragment"
        android:label="@string/menu_profile"
        tools:layout="@layout/fragment_goals" />
    <fragment
        android:id="@+id/nav_history"
        android:name="project.st991377867.marcin.ui.goals.GoalsFragment"
        android:label="@string/menu_history"
        tools:layout="@layout/fragment_history" />
    <fragment
        android:id="@+id/nav_settings"
        android:name="project.st991377867.marcin.ui.goals.GoalsFragment"
        android:label="@string/menu_settings"
        tools:layout="@layout/fragment_settings" />
    <fragment
        android:id="@+id/itemFragment"
        android:name="project.st991377867.marcin.ui.item.ItemFragment"
        android:label="fragment_item"
        tools:layout="@layout/fragment_item" >
        <action
            android:id="@+id/action_itemFragment_to_nav_home"
            app:destination="@id/nav_home" />
    </fragment>
    <fragment
        android:id="@+id/itemDetailFragment"
        android:name="project.st991377867.marcin.ui.item.ItemDetailFragment"
        android:label="fragment_item_detail"
        tools:layout="@layout/fragment_item_detail" />


</navigation>